--- a/backend-service/package.json
+++ b/backend-service/package.json
@@ -18,7 +18,8 @@
     "express": "^5.1.0",
     "jimp": "^1.6.0",
     "mysql2": "^3.15.3",
-    "node-fetch": "^3.3.2"
+    "node-fetch": "^3.3.2",
+    "sharp": "^0.34.4"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
